//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  name String [not null]
  email String [unique, not null]
  password String [not null]
  image_url String
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  UsersOnOrganizations UsersOnOrganizations [not null]
  Entries Entry [not null]
}

Table Organization {
  id String [pk]
  title String [not null]
  description String
  admin_id String [not null]
  created_at DateTime [default: `now()`, not null]
  Categories Category [not null]
  Entries Entry [not null]
  UsersOnOrganizations UsersOnOrganizations [not null]
}

Table UsersOnOrganizations {
  user_id String [not null]
  organization_id String [not null]
  joined_in DateTime [default: `now()`, not null]
  User User [not null]
  Organization Organization [not null]

  indexes {
    (user_id, organization_id) [pk]
  }
}

Table Category {
  id Int [pk, increment]
  name String [not null]
  description String
  organization_id String [not null]
  Organization Organization [not null]
  Entries Entry [not null]
}

Table Entry {
  id Int [pk, increment]
  name String [not null]
  description String
  paid Boolean [not null, default: false]
  date DateTime [default: `now()`, not null]
  value Decimal [not null]
  type String [not null]
  category_id Int [not null]
  organization_id String [not null]
  author_id String [not null]
  Author User [not null]
  Category Category [not null]
  Organization Organization [not null]
}

Ref: UsersOnOrganizations.user_id > User.id

Ref: UsersOnOrganizations.organization_id > Organization.id

Ref: Category.organization_id > Organization.id

Ref: Entry.author_id > User.id

Ref: Entry.category_id > Category.id

Ref: Entry.organization_id > Organization.id